@@ -454,9 +454,10 @@ class ManagedWindow:
 
         Takes care of closing children and removing itself from menu.
         """
-        self.uistate.gwm.close_track(self.track)
-        self.opened = False
-        self.parent_window.present()
+        if self.opened:
+            self.uistate.gwm.close_track(self.track)
+            self.opened = False
+            self.parent_window.present()
 
     def present(self):
         """
